correct spacing on am_entries edit page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -356,7 +356,7 @@ input,
 textarea,
 select,
 fieldset {
-  margin: 30px 5px 30px 5px;
+  margin: 30px 5px 5px 5px;
 	padding: 20px 10px;
 }
 pre,
